--- a/app/views/lanchonetedotrom/home/index.html.erb
+++ b/app/views/lanchonetedotrom/home/index.html.erb
@@ -1,5 +1,5 @@
   <section class="menu cid-rxkNlVvFsy" once="menu" id="menu1-0">
-
+<% @titulos.each do |titulo| %>
     <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm bg-color transparent">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
@@ -13,10 +13,11 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <%= link_to "#top" do %>				          
-                      <%= image_tag("lanchonetedotrom/1564155194400-128x129.png", :alt => "Lanchonete do Trom", :class => "height: 3.8rem;") %>
+                      <img src="<%= titulo.photologo %>" style="height: 3.8rem;" alt="Lanchonete do Trom" />
 				    <% end %>
+                    
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="#top">LANCHONETE DO TROM</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="#top"><%= titulo.title %></a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -32,9 +33,10 @@
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="http://bit.ly/WhatsLanchoneteTrom"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn"></span>
                     
-                    Peça agora mesmo</a></div>
+                    <%= titulo.principalbuttondescription %></a></div>
         </div>
     </nav>
+    <% end %>
 </section>
 
 <section class="cid-rxkNn1vynk mbr-fullscreen mbr-parallax-background" id="header2-1">
@@ -44,14 +46,14 @@
     <div class="container align-center">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
-                    <%= @titulos.title %></h1>
-                
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Não deixe de conhecer nossos deliciosos lanches 🍔
-<br>Sempre agradando o seu paladar 😋
-<br>💳 Aceitamos cartões e entregamos até você&nbsp;🚗</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="index.html#services2-2">Novidades</a>
-                    <a class="btn btn-md btn-white-outline display-4" href="index.html#services3-6">CARDÁPIO</a></div>
+                <% @titulos.each do |titulo| %>
+                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1"><%= titulo.subtitle %></h1>
+                 <p class="mbr-text pb-3 mbr-fonts-style display-5"><%= titulo.text %></p>
+                 <div class="mbr-section-btn">
+                    <a class="btn btn-md btn-primary display-4" href="index.html#services2-2"><%= titulo.bestsellername %></a>
+                    <a class="btn btn-md btn-white-outline display-4" href="index.html#services3-6">CARDÁPIO</a>
+                 </div>
+                <% end %>
             </div>
         </div>
     </div>
@@ -580,7 +582,23 @@
 <section class="mbr-gallery mbr-slider-carousel cid-rxoawiBdi6" id="gallery3-9">
 
     <div>
-        <div><!-- Filter --><!-- Gallery --><div class="mbr-gallery-row"><div class="mbr-gallery-layout-default"><div><div><div class="mbr-gallery-item mbr-gallery-item--p0" data-video-url="false" data-tags="Fantástica"><div href="#lb-gallery3-9" data-slide-to="0" data-toggle="modal"><img src="assets/lanchonetedotrom/66908510-795976880796610-5943748770704392192-n-1-960x720-800x600.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p0" data-video-url="false" data-tags="Fantástica"><div href="#lb-gallery3-9" data-slide-to="1" data-toggle="modal"><img src="assets/lanchonetedotrom/67505585-795976934129938-1261372718775795712-n-960x720-800x600.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p0" data-video-url="false" data-tags="Fantástica"><div href="#lb-gallery3-9" data-slide-to="2" data-toggle="modal"><img src="assets/lanchonetedotrom/67297401-799980250396273-6500490872885346304-n-960x720-800x600.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p0" data-video-url="false" data-tags="Fantástica"><div href="#lb-gallery3-9" data-slide-to="3" data-toggle="modal"><img src="assets/lanchonetedotrom/whatsapp-image-2019-07-25-at-19.18.00-713x537-713x537.jpg" alt="" title=""><span class="icon-focus"></span></div></div></div></div><div class="clearfix"></div></div></div><!-- Lightbox --><div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery3-9"><div class="modal-dialog"><div class="modal-content"><div class="modal-body"><div class="carousel-inner"><div class="carousel-item"><img src="assets/lanchonetedotrom/66908510-795976880796610-5943748770704392192-n-1-960x720.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/lanchonetedotrom/67505585-795976934129938-1261372718775795712-n-960x720.jpg" alt="" title=""></div><div class="carousel-item active"><img src="assets/lanchonetedotrom/67297401-799980250396273-6500490872885346304-n-960x720.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/lanchonetedotrom/whatsapp-image-2019-07-25-at-19.18.00-713x537.jpg" alt="" title=""></div></div><a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery3-9"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery3-9"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span></a><a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span></a></div></div></div></div></div>
+        <div><!-- Filter --><!-- Gallery --><div class="mbr-gallery-row"><div class="mbr-gallery-layout-default"><div><div><div class="mbr-gallery-item mbr-gallery-item--p0" data-video-url="false" data-tags="Fantástica"><div href="#lb-gallery3-9" data-slide-to="0" data-toggle="modal">
+<%= image_tag("lanchonetedotrom/66908510-795976880796610-5943748770704392192-n-1-960x720-800x600.jpg", :alt => "Lanchonete do Trom") %>
+<span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p0" data-video-url="false" data-tags="Fantástica"><div href="#lb-gallery3-9" data-slide-to="1" data-toggle="modal">
+<%= image_tag("lanchonetedotrom/67505585-795976934129938-1261372718775795712-n-960x720-800x600.jpg", :alt => "Lanchonete do Trom") %>
+<span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p0" data-video-url="false" data-tags="Fantástica"><div href="#lb-gallery3-9" data-slide-to="2" data-toggle="modal">
+<%= image_tag("lanchonetedotrom/67297401-799980250396273-6500490872885346304-n-960x720-800x600.jpg", :alt => "Lanchonete do Trom") %>
+<span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p0" data-video-url="false" data-tags="Fantástica"><div href="#lb-gallery3-9" data-slide-to="3" data-toggle="modal">
+<%= image_tag("lanchonetedotrom/whatsapp-image-2019-07-25-at-19.18.00-713x537-713x537.jpg", :alt => "Lanchonete do Trom") %>
+<span class="icon-focus"></span></div></div></div></div><div class="clearfix"></div></div></div><!-- Lightbox --><div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery3-9"><div class="modal-dialog"><div class="modal-content"><div class="modal-body"><div class="carousel-inner"><div class="carousel-item">
+<%= image_tag("lanchonetedotrom/66908510-795976880796610-5943748770704392192-n-1-960x720.jpg", :alt => "Lanchonete do Trom") %>
+</div><div class="carousel-item">
+<%= image_tag("lanchonetedotrom/67505585-795976934129938-1261372718775795712-n-960x720.jpg", :alt => "Lanchonete do Trom") %>
+</div><div class="carousel-item active">
+<%= image_tag("lanchonetedotrom/67297401-799980250396273-6500490872885346304-n-960x720.jpg", :alt => "Lanchonete do Trom") %>
+</div><div class="carousel-item">
+<%= image_tag("lanchonetedotrom/whatsapp-image-2019-07-25-at-19.18.00-713x537.jpg", :alt => "Lanchonete do Trom") %>
+</div></div><a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery3-9"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery3-9"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span></a><a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span></a></div></div></div></div></div>
     </div>
 
 </section>
