--- a/app/views/layouts/backoffice.html.erb
+++ b/app/views/layouts/backoffice.html.erb
@@ -71,26 +71,79 @@
             <p>Administrador</p>
           </div>
         </div>
-        <!-- Sidebar Navidation Menus--><span class="heading">Menu</span>
+        <!-- Sidebar Navidation Menus-->
+        <span class="heading">Principal</span>
         <ul class="list-unstyled">
-          <li class="active">
+          <li class="<%= controller.controller_name == "dashboard" ? 'active' : '' %>">
            <%= link_to backoffice_dashboard_index_path do %>
-            <i class="icon-home"></i>Home
+            <i class="icon-home"></i>Dashboard
            <% end %>
-         </li>
-        </ul>
-        <span class="heading">Cadastros</span>
-        <ul class="list-unstyled">
-          <li> 
+          </li>
+          <li class="<%= controller.controller_name == "site" ? 'active' : '' %>">
             <%= link_to backoffice_config_site_index_path do %> 
              <i class="icon-settings"></i>Sites
             <% end %>
           </li>
-          <li> 
-            <%= link_to backoffice_config_title_index_path do %> 
-             <i class="icon-settings"></i>Titulos
+          <li class="<%= controller.controller_name == "user" ? 'active' : '' %>">
+             <%= link_to backoffice_config_user_index_path do %> 
+             <i class="icon-settings"></i>Admins
             <% end %>
           </li>
+        </ul>
+        <span class="heading">Cadastros</span>
+        <ul class="list-unstyled">
+        
+        <li>
+          <a href="#config" aria-expanded="false" data-toggle="collapse"> <i class="icon-windows"></i>Config</a>
+            <ul id="config" class="collapse list-unstyled ">
+              <li class="<%= controller.controller_name == "title" ? 'active' : '' %>">
+                <%= link_to backoffice_config_title_index_path do %> 
+                 <i class="icon-settings"></i>Titulos
+                <% end %>
+              </li>
+              <li class="<%= controller.controller_name == "about" ? 'active' : '' %>">
+                 <%= link_to backoffice_config_about_index_path do %> 
+                 <i class="icon-settings"></i>Sobre
+                <% end %>
+              </li>
+            </ul>
+        </li>
+        <li>
+          <a href="#product" aria-expanded="false" data-toggle="collapse"> <i class="icon-windows"></i>Produto</a>
+            <ul id="product" class="collapse list-unstyled ">
+               <li class="<%= controller.controller_name == "category" ? 'active' : '' %>">
+                 <%= link_to backoffice_product_category_index_path do %> 
+                 <i class="icon-settings"></i>Categoria
+                <% end %>
+              </li>
+               <li>
+                 <a href="#"><i class="icon-home"></i>Rótulos</a>
+               </li>
+               <li>
+                 <a href="#"><i class="icon-home"></i>Produtos</a>
+               </li>
+            </ul>
+        </li>
+        <li>
+          <a href="#contact" aria-expanded="false" data-toggle="collapse"> <i class="icon-windows"></i>Contato</a>
+            <ul id="contact" class="collapse list-unstyled ">
+               <li>
+                 <a href="#"><i class="icon-home"></i>Tipos de Contato</a>
+               </li>
+                <li>
+                 <a href="#"><i class="icon-home"></i>Contatos</a>
+               </li>
+                <li>
+                 <a href="#"><i class="icon-home"></i>Endereço</a>
+               </li>
+            </ul>
+        </li>
+      </ul>
+        <span class="heading">Links</span>
+        <ul class="list-unstyled">
+           <li>
+            <a href="#"><i class="icon-home"></i>Link do site</a>
+           </li>
         </ul>
       </nav>
     <!-- Sidebar Navigation end-->
