--- a/app/views/backoffice/config/user/index.html.erb
+++ b/app/views/backoffice/config/user/index.html.erb
@@ -22,7 +22,7 @@
 	                <tr>
 	                  <th scope="row"><%= admin.id %></th>
 	                  <td><%= admin.email %></td>
-	                  <td></td>
+	                  <td><%= admin.site_id %></td>
 	                  <td style="width: 130px; text-align: center;"> 
 	                  	<div style="float:left; margin: 1px;">
 	                  	<%= link_to "", class: "btn btn-primary" do %>
