--- a/app/views/backoffice/product/category/index.html.erb
+++ b/app/views/backoffice/product/category/index.html.erb
@@ -1,5 +1,47 @@
 <div class="page-header">
   <div class="container-fluid">
     <h2 class="h5 no-margin-bottom">Categoria dos produtos</h2>
+    <h3><%= notice %></h3>
   </div>
 </div>
+<div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="block margin-bottom-sm">
+          <div class="table-responsive"> 
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Descrição</th>
+                  <th style="text-align: center;">Ações</th>
+                </tr>
+              </thead>
+              <tbody>
+              	<% @categories.each do |categoria| %>
+	                <tr>
+	                  <th scope="row"><%= categoria.id %></th>
+	                  <td><%= categoria.description %></td>
+	                  <td style="width: 130px; text-align: center;">
+	                  	<%= link_to edit_backoffice_product_category_path(categoria), class: "btn btn-primary" do %>
+	                        <i class="icon-new-file"></i>
+	                    <% end %>
+	                    <%= link_to backoffice_product_category_path(categoria), :method => :delete, class: "btn btn-secondary", data: {confirm: "Confirma a exclusão do admin <b>#{categoria.description}</b>?"} do %>
+	                    	<i class="icon-close"></i>
+	                        <% end %>
+	                  </td>
+	                </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+      	<div style="width: 130px; text-align: center;">
+      	 <%= link_to new_backoffice_product_category_path, class: "btn btn-primary" do %>
+            <i class="fa fa-plus"></i>
+         <% end %>
+        </div>
+      </div>
+    </div>
