--- a/app/views/backoffice/product/product/new.html.erb
+++ b/app/views/backoffice/product/product/new.html.erb
@@ -30,6 +30,10 @@
             <%= t.text_field :description, class:"form-control" %>
         </div>
         <div class="form-group">
+            <%= t.label "Preço", class: "form-control-label" %>
+            <%= t.text_field :price, class:"form-control" %>
+        </div>
+        <div class="form-group">
             <%= t.label "Destacar", class: "form-control-label" %>
             <%= t.text_field :bestseller, class:"form-control" %>
         </div>
