--- a/app/views/layouts/lanchonetedotrom.html.erb
+++ b/app/views/layouts/lanchonetedotrom.html.erb
@@ -19,7 +19,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'lanchonetedotrom/application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'lanchonetedotrom/application' %>
     
   </head>
 
