--- a/app/views/backoffice/config/about/index.html.erb
+++ b/app/views/backoffice/config/about/index.html.erb
@@ -1,37 +1,45 @@
 <div class="page-header">
   <div class="container-fluid">
-    <h2 class="h5 no-margin-bottom">História da Lanchonete</h2>
+    <h2 class="h5 no-margin-bottom">Informações da Lanchonete</h2>
   </div>
 </div>
 <div class="container-fluid">
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="block margin-bottom-sm">
-          <div class="table-responsive"> 
-            <table class="table">
-              <thead>
-                <tr>
-                  <th>#</th>
-                  <th>Informações sobre a lanchonete</th>
-                  <th style="text-align: center;">Ações</th>
-                </tr>
-              </thead>
-              <tbody>
-              	<% @abouts.each do |about| %>
-	                <tr>
-	                  <th scope="row"><%= about.id %></th>
-	                  <td><%= about.description %></td>
-	                  <td><%= about.site_id %></td>
-		              <td style="width: 130px; text-align: center;">
-	                  	<%= link_to edit_backoffice_config_about_path(about), class: "btn btn-primary" do %>
-	                        <i class="icon-new-file"></i>
-	                    <% end %>
-		              </td>
-	                </tr>
-                <% end %>
-              </tbody>
-            </table>
-          </div>
-        </div>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="block margin-bottom-sm">
+      <div class="table-responsive"> 
+        <table class="table">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Descrição</th>
+              <th>Site</th>
+              <th style="text-align: center;">Ações</th>
+            </tr>
+          </thead>
+          <tbody>
+          	<% @abouts.each do |about| %>
+              <tr>
+                <th scope="row"><%= about.id %></th>
+                <td><%= about.description %></td>
+                <td><%= about.site_id %></td>
+              <td style="width: 130px; text-align: center;">
+                	<%= link_to edit_backoffice_config_about_path(about), class: "btn btn-primary" do %>
+                      <i class="icon-new-file"></i>
+                  <% end %>
+              </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
       </div>
     </div>
+  </div>
+    <div class="row">
+        <div style="width: 130px; text-align: center;">
+         <%= link_to new_backoffice_config_about_path, class: "btn btn-primary" do %>
+            <i class="fa fa-plus"></i>
+         <% end %>
+        </div>
+      </div>
+</div>
