--- a/app/views/backoffice/config/user/new.html.erb
+++ b/app/views/backoffice/config/user/new.html.erb
@@ -1,2 +1,60 @@
-<h1>Backoffice::Config::User#new</h1>
-<p>Find me in app/views/backoffice/config/user/new.html.erb</p>
+<div class="page-header">
+  <div class="container-fluid">
+    <h2 class="h5 no-margin-bottom">Novo Administrador</h2>
+    <h3><%= notice %></h3>
+  </div>
+</div>
+
+<% if @admin.errors.any? %>
+    <div class="alert alert-danger alert-dismissable">
+    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+
+    <ul>
+        <% @admin.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+        <% end %>
+    </ul>
+
+    </div>
+<% end %>
+
+<div class="col-lg-12">
+	<div class="block">
+	  <div class="block-body">
+	    <%= form_for @admin, url: backoffice_config_user_index_path do |t| %>
+		    <div class="form-group">
+	           <%= t.label "Nome", class: "form-control-label" %>
+	           <%= t.text_field :name, class:"form-control" %>
+		    </div>
+	        <div class="form-group">
+	           <%= t.label "Email", class: "form-control-label" %>
+	           <%= t.text_field :email, class:"form-control" %>
+	        </div>
+	        <div class="form-group">
+              <%= t.label "Senha", class: "form-control-label" %>
+              <%= t.text_field :password, class:"form-control" %>
+            </div>
+            <div class="form-group">
+              <%= t.label "Confirmar senha", class: "form-control-label" %>
+              <%= t.text_field :password_confirmation, class:"form-control" %>
+            </div>
+	        <div class="form-group">
+	         <%= t.label "Tipo de acesso", class: "form-control-label" %>
+			 <%= t.collection_radio_buttons(:role, options_for_roles, :id, :description) do |b| %>
+			  <div class="i-checks">
+			    <%= b.radio_button(class: "radio-template"){ b.radio_button } %>
+			    <%= b.label { b.text } %>
+			  </div>
+			 <% end %>
+			</div>
+            <div class="form-group">
+              <%= t.label "Site", class: "form-control-label" %>
+              <%= t.text_field :site_id, class:"form-control" %>
+            </div>
+	        <div class="form-group">       
+	         <%= t.submit "Salvar", class: "btn btn-primary" %>
+	        </div>
+	    <% end %>
+	  </div>
+	</div>
+</div>
