--- a/app/views/backoffice/contact/phone/edit.html.erb
+++ b/app/views/backoffice/contact/phone/edit.html.erb
@@ -1,2 +1,36 @@
-<h1>Backoffice::Contact::Phone#edit</h1>
-<p>Find me in app/views/backoffice/contact/phone/edit.html.erb</p>
+<div class="page-header">
+  <div class="container-fluid">
+    <h2 class="h5 no-margin-bottom">Alterar contato</h2>
+  </div>
+</div>
+<% if @phone.errors.any? %>
+    <div class="alert alert-danger alert-dismissable">
+    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+
+    <ul>
+        <% @phone.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+        <% end %>
+    </ul>
+
+    </div>
+<% end %>
+<div class="col-lg-12">
+	<div class="block">
+	  <div class="block-body">
+	    <%= form_for([:backoffice, :contact, @phone]) do |t| %>
+	      <div class="form-group">
+            <%= t.label "Nome", class: "form-control-label" %>
+            <%= t.text_field :name, class:"form-control" %>
+	      </div>
+	      <div class="form-group">
+            <%= t.label "Telefone", class: "form-control-label" %>
+            <%= t.text_field :phone, class:"form-control" %>
+	      </div>
+	      <div class="form-group">       
+	        <%= t.submit "Salvar", class: "btn btn-primary" %>
+	      </div>
+	    <% end %>
+	  </div>
+	</div>
+</div>
