--- a/app/views/backoffice/contact/phone/index.html.erb
+++ b/app/views/backoffice/contact/phone/index.html.erb
@@ -1,2 +1,51 @@
-<h1>Backoffice::Contact::Phone#index</h1>
-<p>Find me in app/views/backoffice/contact/phone/index.html.erb</p>
+<div class="page-header">
+  <div class="container-fluid">
+    <h2 class="h5 no-margin-bottom">Contatos</h2>
+    <h3><%= notice %></h3>
+  </div>
+</div>
+<div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="block margin-bottom-sm">
+          <div class="table-responsive"> 
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Nome</th>
+                  <th>Telefone</th>
+                  <th>Site</th>
+                  <th style="text-align: center;">Ações</th>
+                </tr>
+              </thead>
+              <tbody>
+              	<% @phones.each do |phone| %>
+	                <tr>
+	                  <th scope="row"><%= phone.id %></th>
+	                  <td><%= phone.name %></td>
+	                  <td><%= phone.phone %></td>
+                    <td><%= phone.site_id %></td>
+	                  <td style="width: 130px; text-align: center;">
+	                  	<%= link_to edit_backoffice_contact_phone_path(phone), class: "btn btn-primary" do %>
+	                        <i class="icon-new-file"></i>
+	                    <% end %>
+	                    <%= link_to backoffice_contact_phone_path(phone), :method => :delete, class: "btn btn-secondary", data: {confirm: "Confirma a exclusão do admin <b>#{phone.name}</b>?"} do %>
+	                    	<i class="icon-close"></i>
+	                        <% end %>
+	                  </td>
+	                </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+      	<div style="width: 130px; text-align: center;">
+      	 <%= link_to new_backoffice_contact_phone_path, class: "btn btn-primary" do %>
+            <i class="fa fa-plus"></i>
+         <% end %>
+        </div>
+      </div>
+    </div>
