--- a/app/views/backoffice/dashboard/index.html.erb
+++ b/app/views/backoffice/dashboard/index.html.erb
@@ -1,5 +1,6 @@
 <div class="page-header">
   <div class="container-fluid">
     <h2 class="h5 no-margin-bottom">Dashboard</h2>
+    <h3><%= notice %></h3>
   </div>
 </div>
