--- a/app/views/backoffice/contact/address/index.html.erb
+++ b/app/views/backoffice/contact/address/index.html.erb
@@ -33,7 +33,7 @@
 	                  <td><%= address.city %></td>
 	                  <td><%= address.state %></td>
 	                  <td><%= address.zipcode %></td>
-                      <td><%= address.site_id %></td>
+                      <td><%= address.site.name %></td>
 	                  <td style="width: 130px; text-align: center;">
 	                  	<%= link_to edit_backoffice_contact_address_path(address), class: "btn btn-primary" do %>
 	                        <i class="icon-new-file"></i>
