--- a/app/views/backoffice/product/label/index.html.erb
+++ b/app/views/backoffice/product/label/index.html.erb
@@ -25,7 +25,7 @@
 	                  <th scope="row"><%= label.id %></th>
 	                  <td><%= label.name %></td>
 	                  <td><%= label.description %></td>
-	                  <td><%= label.site_id %></td>
+	                  <td><%= label.site.name %></td>
 	                  <td style="width: 130px; text-align: center;">
 	                  	<%= link_to edit_backoffice_product_label_path(label), class: "btn btn-primary" do %>
 	                        <i class="icon-new-file"></i>
