--- a/app/views/backoffice/config/about/index.html.erb
+++ b/app/views/backoffice/config/about/index.html.erb
@@ -22,7 +22,7 @@
               <tr>
                 <th scope="row"><%= about.id %></th>
                 <td><%= about.description %></td>
-                <td><%= about.site_id %></td>
+                <td><%= about.site.name %></td>
               <td style="width: 130px; text-align: center;">
                 	<%= link_to edit_backoffice_config_about_path(about), class: "btn btn-primary" do %>
                       <i class="icon-new-file"></i>
