--- a/app/views/backoffice/config/user/edit.html.erb
+++ b/app/views/backoffice/config/user/edit.html.erb
@@ -21,6 +21,10 @@
 	<div class="block">
 	  <div class="block-body">
 	    <%= form_for([:backoffice, :config, @admin]) do |t| %>
+	        <div class="form-group">
+               <%= t.label "Foto do perfil", class: "form-control-label" %>
+               <%= t.file_field :photoavatar, class:"form-control" %>
+	        </div>
 		    <div class="form-group">
 	           <%= t.label "Nome", class: "form-control-label" %>
 	           <%= t.text_field :name, class:"form-control" %>
