--- a/app/views/backoffice/contact/phone/index.html.erb
+++ b/app/views/backoffice/contact/phone/index.html.erb
@@ -25,7 +25,7 @@
 	                  <th scope="row"><%= phone.id %></th>
 	                  <td><%= phone.name %></td>
 	                  <td><%= phone.phone %></td>
-                    <td><%= phone.site_id %></td>
+                    <td><%= phone.site.name %></td>
 	                  <td style="width: 130px; text-align: center;">
 	                  	<%= link_to edit_backoffice_contact_phone_path(phone), class: "btn btn-primary" do %>
 	                        <i class="icon-new-file"></i>
